--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  --color-light-blue: rgb(212, 222, 254);
+  --color-light-grey: rgb(129, 137, 163);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
